--- a/package.json
+++ b/package.json
@@ -14,21 +14,30 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src/"
   },
   "dependencies": {
+    "@nest-middlewares/cors": "^6.0.0",
+    "@nest-middlewares/morgan": "^6.0.0",
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
+    "@nestjs/jwt": "^6.1.1",
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1",
+    "morgan": "^1.9.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
-    "@types/express": "4.16.1",
+    "@types/express": "^4.17.1",
     "@types/jest": "24.0.11",
     "@types/mongoose": "^5.5.17",
     "@types/node": "11.13.4",
+    "@types/passport-jwt": "^3.0.2",
     "@types/supertest": "2.0.7",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
